<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/next_button"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/time_and_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/time_and_temperature_pattern"
        android:layout_marginStart="140dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toStartOf="@+id/weather_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="240dp"
        android:layout_marginBottom="12dp"
        android:textSize="14sp"
        android:text="@string/desc_pattern"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintEnd_toStartOf="@+id/weather_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_and_temperature" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginEnd="@dimen/right_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/weather_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/sun"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/no_image" />

</androidx.constraintlayout.widget.ConstraintLayout>